2002-04-17  Sam Steingold  <sds@gnu.org>

	* stream.d (low_close_socket) [WIN32_NATIVE]: shutdown the socket
	before closing it
	(SOCKET-STREAM-SHUTDOWN): use SOCK_error(), not OS_errno()

2002-04-16  Peter Burwood  <clisp@peterb.org.uk>

	* autoconf/aclocal.m4 (HAVE_GETRUSAGE): check whether getrusage()
	actually works, not just that it is present (it is present in
	cygwin, but works only on NT, not win98)

2002-04-16  Joerg-Cyril Hoehle  <Joerg-Cyril.Hoehle@t-systems.com>

	* regexp.lisp (regexp-exec): correct positions for ()-group submatches

2002-04-16  Joerg-Cyril Hoehle  <Joerg-Cyril.Hoehle@t-systems.com>

	* foreign.d (convert_from_foreign): fix c-array uint8/16/32 return
	broken since CVS 1999-09-13

2002-04-16  Sam Steingold  <sds@gnu.org>

	* foreign1.lisp (parse-c-function): check :OUT & :IN-OUT args for
	being pointers, just like in FOREIGN-CALL-OUT in foreign.d

2002-04-16  Joerg-Cyril Hoehle  <Joerg-Cyril.Hoehle@t-systems.com>
	    Sam Steingold  <sds@gnu.org>

	* io.d (pr_orecord): print invalid FOREIGN-VARIABLEs and
	FOREIGN-FUNCTIONs with INVALID prefix and address with offset

2002-04-16  Sam Steingold  <sds@gnu.org>

	error reporting unification
	* record.d (fehler_key_odd): new function
	(check_keywords): new macro
	(%ALLOCATE_INSTANCE, %SHARED-INITIALIZE, %REINITIALIZE-INSTANCE)
	(%INITIALIZE-INSTANCE, %MAKE-INSTANCE): use them
	* constsym.d: define SHARED-INITIALIZE, REINITIALIZE-INSTANCE,
	INITIALIZE-INSTANCE, MAKE-INSTANCE here for error reporting
	* subr.d, constsym.d: %* should be named p*, not *

2002-04-16  Stefan Kain  <stefan.kain@freenet.de>

	* clos.lisp, record.d: translated all comments

2002-04-12  Peter Burwood  <clisp@peterb.org.uk>

	* stream.d (finish_tty_output) [UNIX_CYGWIN32]: ignore EBADF from
	fsync, just like in force_tty_output()

2002-04-12  Sam Steingold  <sds@gnu.org>

	*BROWSERS* and *BROWSER* are in CUSTOM, as advertised
	* init.lisp (*browser*, *browsers*): export from CUSTOM